# legislation-tracker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  alembic.ini  celerybeat-schedule  check_db.py  pyproject.toml  requirements.txt  run_scrapers.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/api/: base_routes.py  routes.py
backend/app/models/: __init__.py  models.py
backend/app/scrapers/: __init__.py  base.py  congress.py  federal_register.py  scrapers.py  state.py
backend/migrations/: env.py
backend/migrations/versions/: 855df3f183f2_initial.py  905da6b1cd5d_initial.py
backend/tests/: test_api.zzz
frontend/: .env.example  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  config.ts  index.tsx
frontend/src/components/: index.ts
frontend/src/components/common/: ThemeToggle.tsx  ui.tsx
frontend/src/components/features/: DetailedView.tsx  FilterBar.tsx  LegislationCard.tsx  LegislationDashboard.tsx  Pagination.tsx  StatsOverview.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: index.ts  useLegislation.ts  usePagination.ts  useSearch.ts
frontend/src/styles/: index.css
frontend/src/types/: api.ts  components.ts  index.ts  legislation.ts  stats.ts  utils.ts
frontend/src/utils/: api.ts  date.ts  format.ts  index.ts
scripts/: check_db.sh  deploy.sh  dev.sh  scrape.sh  setup.sh  stop.sh
(+5 files in other folders)
