[tool.poetry]
name = "legislation-tracker"
version = "1.0.0"
description = "Track federal and state legislation and executive orders"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.4.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
ratelimit = "^2.2.1"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
